# llvm-fmi-check

./: .gitignore  .gitmodules  CMakeLists.txt  fmi_check.sh  readme.md
.github/workflows/: build.yml
analysis/: CMakeLists.txt
analysis/FmiCheck/: CMakeLists.txt  FmiCheck.cpp
analysis/FmiCheckHE/: CMakeLists.txt  FmiCheck.h  FmiCheckHE.cpp  FmiCheckMain.cpp
analysis/fmicall/: CMakeLists.txt  fmicall.cpp  fmicall.h  fmicallpass.cpp
examples/drobotti/: spec.mabl
examples/drobotti/cpp/: CMakeLists.txt  co-sim.cxx  co-sim.hxx  fmi2_annotate.h  spec.mabl
examples/fmicall/: CMakeLists.txt  main.cpp
examples/initialize_singleWaterTank/: spec.mabl
examples/initialize_singleWaterTank/cpp/: CMakeLists.txt  co-sim.cxx  co-sim.hxx
